# aiohdfs

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  setup.cfg  test-requirements.txt  tox.ini
aiohdfs/: __init__.py  errors.py  operations.py
docs/source/: conf.py  index.rst
example/: example.py
tests/: test_errors.py  test_webhdfs.py
