[metadata]
name =aiohdfs
description =
    Asyncio Python wrapper for the Hadoop WebHDFS REST API
description-file =
    README.rst
author = Artyom Topchyan
author-email = a.topchyan@reply.de
home-page = https://github.com/RiverlandReply/aiohdfs
url = https://github.com/RiverlandReply/aiohdfs
version = 0.1.2

[wheel]
universal = 1

[nosetests]
nocapture=1
cover-package=aiohdfs
cover-erase=1

[flake8]
exclude = .git,.idea,.tox,dist

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
